--- a/src/assets/styles/Components/Coverpage.scss
+++ b/src/assets/styles/Components/Coverpage.scss
@@ -1,10 +1,46 @@
 .cover{
-    background-image: url(../img/cover2.jpg);
+    background: rgb(162,162,162);
+     background: linear-gradient(119deg, rgba(162,162,162,1) 0%, rgba(193,194,193,1) 33%, rgba(204,204,204,1) 62%, rgba(244,243,240,1) 90%);  
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Montserrat', sans-serif;
+   
+   
+         
+}
+
+.cover .text {
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 120px;
+    line-height: 39px;
+
+
+}
+
+.cover .text p:first-child{
+    font-size:25px;
+  
+    
+}
+
+.cover .text p:last-child{
+
+   font-size:38px;
+   font-weight: 300;
+}
+
+
+.cover .cover__img{
     object-fit: cover;
-    height: 500px;
-    width: 100%;
-    opacity: 0.8;
-    background-repeat: no-repeat;
-    background-size: cover;
+    height: 60%;
+    width: 50%;
+    margin-right: -29px;
+    opacity: .8;
+    
+    
 }
 
