--- a/src/assets/styles/Components/Coverpage.scss
+++ b/src/assets/styles/Components/Coverpage.scss
@@ -1,46 +1,67 @@
-.cover{
-    background: rgb(162,162,162);
-     background: linear-gradient(119deg, rgba(162,162,162,1) 0%, rgba(193,194,193,1) 33%, rgba(204,204,204,1) 62%, rgba(244,243,240,1) 90%);  
+.cover {
+    background: rgb(227, 227, 227);
+    background: linear-gradient(180deg, rgba(227, 227, 227, 1) 0%, rgba(255, 255, 255, 1) 30%);
     display: flex;
     justify-content: space-between;
     font-family: 'Montserrat', sans-serif;
-   
-   
-         
+
+
+
 }
 
 .cover .text {
-    padding: 0;
+    padding: 20px;
     display: flex;
-    justify-content: center;
+    // justify-content: center;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
     margin-left: 120px;
     line-height: 39px;
-
-
+    text-align: justify;
+    margin-top: 70px;
+    color: #ffffff;
+    background: rgb(255, 0, 77);
+    background: linear-gradient(90deg, rgba(255, 0, 77, 1) 0%, rgba(255, 0, 92, 1) 100%);
+    height: 250px;
+    border-radius: 7px;
+    line-height: 20px;
+    width: 500px;
 }
 
-.cover .text p:first-child{
-    font-size:25px;
-  
-    
-}
-
-.cover .text p:last-child{
-
-   font-size:38px;
-   font-weight: 300;
+.mainText {
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 20px;
 }
 
 
-.cover .cover__img{
+
+.cover .cover__img {
     object-fit: cover;
     height: 60%;
     width: 50%;
     margin-right: -29px;
-    opacity: .8;
-    
-    
+    // opacity: .8;
+
+
 }
 
+
+.coverButton {
+    width: max-content;
+    text-align: center;
+    border-radius: 7px;
+    padding: 10px;
+    border: 0px;
+    background-color: #ffffff;
+    color: rgb(255, 0, 77);
+    font-weight: bold;
+    text-decoration: none;
+
+}
+
+.buttonCenter {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
