--- a/src/assets/styles/Components/Buttons.scss
+++ b/src/assets/styles/Components/Buttons.scss
@@ -1,20 +1,26 @@
-.box{
-    margin-right: 50px;
+
+ .box{
+    margin: 15px;
     display: flex;
+    justify-content: space-around;
     flex-direction: column;
-    width: 800px;
+    align-items: center;
+   
 }
 
 .box .box_1{
+    width: 70%;
     display: flex;
     justify-content: space-around;
-
+   
 }
 
 .box .box_2{
-display: flex;
-justify-content: center;
-//margin: 30px;
+    width: 70%;
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-evenly;
+
 }
 
 .box .box--button{
@@ -22,8 +28,20 @@ justify-content: center;
     font-size: 13px;
     border-radius: 5px;
     height: 30px;
-    width: 115px;
+    width: 90px;
     margin-left: -15px;
     font-weight: bold;
-    background-image: linear-gradient(to right, #1D2B64 0%, #F8CDDA 51%, #1D2B64 100%);
+    background-color: #e899dc;
+    background-image: linear-gradient(315deg, #e899dc 0%, #d387ab 74%);
+    font-family: 'Montserrat', sans-serif;
+       
+}
+
+.box--button:focus{ 
+    outline-color: black ;
+    
+}
+
+.box--button:hover{
+    box-shadow:0px 4px 3px rgba(0,0,0,.5);
 }
