--- a/src/assets/styles/Components/App.scss
+++ b/src/assets/styles/Components/App.scss
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0; 
     font-size: 13px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif !important;
     
 }
 
