--- a/src/assets/styles/Components/Coverpage.scss
+++ b/src/assets/styles/Components/Coverpage.scss
@@ -60,8 +60,16 @@
 
 }
 
+.coverButton:focus {
+    outline: none;
+}
+.coverButton:hover {
+    box-shadow:0px 4px 3px rgba(0,0,0,.5);
+}
+
 .buttonCenter {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
+
