--- a/src/assets/styles/Components/Header.scss
+++ b/src/assets/styles/Components/Header.scss
@@ -89,5 +89,10 @@
     -moz-border-radius: 20px;
     border-radius: 20px;
     text-decoration: none;
+    box-shadow:0px 4px 3px rgba(0,0,0,.5);
 
+}
+
+.nav-right-section__button:focus{
+    outline: none;
 }
