--- a/src/assets/styles/Components/Coverpage.scss
+++ b/src/assets/styles/Components/Coverpage.scss
@@ -1,6 +1,6 @@
 .cover {
-    background: rgb(227, 227, 227);
-    background: linear-gradient(180deg, rgba(227, 227, 227, 1) 0%, rgba(255, 255, 255, 1) 30%);
+    // background: rgb(227, 227, 227);
+    // background: linear-gradient(180deg, rgba(227, 227, 227, 1) 0%, rgba(255, 255, 255, 1) 30%);
     display: flex;
     justify-content: space-between;
     font-family: 'Montserrat', sans-serif;
@@ -19,9 +19,9 @@
     line-height: 39px;
     text-align: justify;
     margin-top: 70px;
-    color: #ffffff;
-    background: rgb(255, 0, 77);
-    background: linear-gradient(90deg, rgba(255, 0, 77, 1) 0%, rgba(255, 0, 92, 1) 100%);
+    color: rgb(255, 0, 77);
+    // background: rgb(255, 0, 77);
+    // background: linear-gradient(90deg, rgba(255, 0, 77, 1) 0%, rgba(255, 0, 92, 1) 100%);
     height: 250px;
     border-radius: 7px;
     line-height: 20px;
@@ -53,8 +53,8 @@
     border-radius: 7px;
     padding: 10px;
     border: 0px;
-    background-color: #ffffff;
-    color: rgb(255, 0, 77);
+    background-color: rgb(255, 0, 77);
+    color: #ffffff;
     font-weight: bold;
     text-decoration: none;
 
@@ -63,8 +63,11 @@
 .coverButton:focus {
     outline: none;
 }
+
 .coverButton:hover {
-    box-shadow:0px 4px 3px rgba(0,0,0,.5);
+    // box-shadow: 0px 4px 3px rgba(0, 0, 0, .5);
+    background-color: #b30036;
+
 }
 
 .buttonCenter {
@@ -72,4 +75,3 @@
     flex-direction: row;
     justify-content: center;
 }
-
