--- a/src/assets/styles/Components/Footer.scss
+++ b/src/assets/styles/Components/Footer.scss
@@ -1,7 +1,7 @@
 .footer{
     height: 250px;
     width: 100%;
-    background-color: #333333;
+    background-color: grey;
     color: white;
     opacity: 10; 
     // box-shadow: 4px 4px 3px rgba(.5,0,0,0);
