small style changes in navigation and cards

--- a/src/assets/styles/Components/App.scss
+++ b/src/assets/styles/Components/App.scss
@@ -1,12 +1,17 @@
-body{
+body {
     margin: 0;
-    padding: 0; 
+    padding: 0;
     font-size: 13px;
     font-family: 'Montserrat', sans-serif !important;
-    
+
 }
 
 
-a{
+a {
     text-decoration: none;
+}
+
+
+.card {
+    border-radius: 20px;
 }
