--- a/src/assets/styles/Components/CardJobs.scss
+++ b/src/assets/styles/Components/CardJobs.scss
@@ -1,3 +1,8 @@
 // .prueba{
 //     font-family: 'Montserrat', sans-serif;
 // }
+
+.cardStyle {
+    -webkit-box-shadow: 0px 5px 0px 2px #ff4f51;
+    box-shadow: 0px 5px 0px 2px #ff4f51;
+}
